--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@tanstack/react-query": "^5.81.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
